syntax = "proto3";

package lessworkflow.oderstorageservice;

option go_package = "github.com/albertsen/lessworkflow/gen/proto/orderstorageservice";

import "proto/orderdata/orderdata.proto";

service OrderStorageService {
  rpc SaveOrder(lessworkflow.orderdata.Order) returns (SaveOrderResponse) {}
  rpc GetOrder(GetOrderRequest) returns (lessworkflow.orderdata.Order) {}
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse) {}
}

message GetOrderRequest { string order_id = 1; }

message SaveOrderResponse {
  string order_id = 1;
  bool created = 2;
  lessworkflow.orderdata.Order order = 3;
}

message DeleteOrderRequest { string order_id = 1; }

message DeleteOrderResponse {
  string order_id = 1;
  bool deleted = 2;
}